20110130 ULA book says that MIC only isn't enough to drive the speaker as output
         voltage is below the 1.4v threshold (Fred).
20110130 fuse.c,machine.h,machines/machines_periph.c,Makefile.am,periph.h,
         settings.dat,sound.c,sound.h,specdrum.[ch],ui/options.dat: SpecDrum
         support (patch #3164313, very slightly reworked) (Jon Mitchell).
20110131 ui/options.dat: fix compilation of widget UI by adding a shortcut for
         SpecDrum volume (Fred).
20110131 machine/machines_periph.c: SpecDrum available on 128K as well.
20110202 configure.in: update glib and GTK+ required versions to new minimums
         (more from patch #3160211) (Sergio Baldovi).
20110203 (all peripheral files): move to new peripherals/ subdirectory.
20110203 ui/{sdl/sdldisplay.c,widget/{debugger.c,menu.c,widget.c}},
         z80/coretest.c: fix up SDL for new peripherals structure.
20110204 peripherals/disk/disk.c: fix transposed arguments in memset calls
         (Sergio Baldovi).
20110204 peripherals/specdrum.h: tweak whitespace (Fred).
20110204 peripherals: add .deps and Makefile to the ignore property (Fred).
20110206 memory.[ch],peripherals/ide/{divide.c,zxatasp.c,zxcf.c}: use memory
         pool to allocate the DivIDE/ZXATASP/ZXCF memory.
20110207 peripherals/disk/disk.c: fix more transposed arguments in memset calls
         (thanks, Stuart Brady) (Fred).
20110207 peripherals/nic/enc28j60.c: add missing #include <string.h> (Fred).
20110207 machines/machines_periph.c: enable SpecDrum for TC2048 as is has
         a Spectrum compatible edge connector and ROM (Fred).
20110207 machines/machines_periph.c,periph.[ch],peripherals/{ay.c,disk/{beta.c,
         plusd.c},fuller.c,ide/{divide.c,simpleide.c,zxatasp.c,zxcf.c},if1.c,
         joystick.c,kempmouse.[ch],melodik.c,printer.c,scld.c,speccyboot.c,
         specdrum.c,ula.c},periph.h: periph_t does not represent a peripheral,
         but just one port from a peripheral, so rename appropriately.