@@ -40,7 +40,7 @@
 
 static int spec16_reset( void );
 
-static libspectrum_byte empty_chunk[ MEMORY_PAGE_SIZE ];
+static libspectrum_byte *empty_chunk;
 static memory_page empty_mapping;
 
 int spec16_init( fuse_machine_info *machine )
@@ -54,14 +54,6 @@ int spec16_init( fuse_machine_info *machine )
   machine->ram.port_from_ula  = spec48_port_from_ula;
   machine->ram.contend_delay  = spectrum_contend_delay_65432100;
   machine->ram.contend_delay_no_mreq = spectrum_contend_delay_65432100;
-
-  memset( empty_chunk, 0xff, MEMORY_PAGE_SIZE );
-
-  empty_mapping.page = empty_chunk;
-  empty_mapping.writable = 0;
-  empty_mapping.contended = 0;
-  empty_mapping.bank = MEMORY_BANK_NONE;
-  empty_mapping.source = MEMORY_SOURCE_SYSTEM;
 
   machine->unattached_port = spectrum_unattached_port;
 
@@ -92,6 +84,18 @@ spec16_reset( void )
 
   memory_map_home[2] = &memory_map_ram[10];
   memory_map_home[3] = &memory_map_ram[11];
+
+  if( !empty_chunk ) {
+    empty_chunk = memory_pool_allocate_persistent( MEMORY_PAGE_SIZE, 1 );
+
+    memset( empty_chunk, 0xff, MEMORY_PAGE_SIZE );
+
+    empty_mapping.page = empty_chunk;
+    empty_mapping.writable = 0;
+    empty_mapping.contended = 0;
+    empty_mapping.bank = MEMORY_BANK_NONE;
+    empty_mapping.source = MEMORY_SOURCE_SYSTEM;
+  }
 
   memory_map_home[4] = memory_map_home[5] = &empty_mapping;
   memory_map_home[6] = memory_map_home[7] = &empty_mapping;
